force-app/main/default/objects/Modules__c/Modules__c.object-meta.xml
<CustomObject>
    <label>Module</label>
    <nameField>
        <displayFormat>Module-{0000}</displayFormat>
        <label>Module Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>