force-app/main/default/objects/Modules__c/fields/Class_Category__c.field-meta.xml
<CustomField>
    <fullName>Class_Category__c</fullName>
    <label>Class Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LA Care (IHSS+)</fullName>
            </value>
            <value>
                <fullName>IHSS+ A&amp;D</fullName>
            </value>
            <value>
                <fullName>Education Fund</fullName>
            </value>
            <value>
                <fullName>CDPH/UCSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>