force-app/main/default/objects/Modules__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.Class_Category__c</field>
            <operation>equals</operation>
            <value>Education Fund</value>
        </filterItems>
        <filterItems>
            <field>CCA_Course__c.Course_Category__c</field>
            <operation>equals</operation>
            <value>Education Fund</value>
        </filterItems>
        <filterItems>
            <field>$Source.Class_Category__c</field>
            <operation>equals</operation>
            <value>LA Care (IHSS+), IHSS+ A&amp;D, CDPH/UCSF</value>
        </filterItems>
        <filterItems>
            <field>CCA_Course__c.Course_Category__c</field>
            <operation>equals</operation>
            <value>IHSS / Cuidado en Casa, Basic Skills Courses / Conocimientos, Career Courses / Para Carrera, Personal Developement / Desarrollo Personal, Second Quiz</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCA_Course__c</referenceTo>
    <relationshipLabel>Modules</relationshipLabel>
    <relationshipName>Modules</relationshipName>
    <type>Lookup</type>
</CustomField>