force-app/main/default/objects/Modules__c/fields/Is_it_a_Mandatory_module__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_Mandatory_module__c</fullName>
    <label>Is it a Mandatory module?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>