force-app/main/default/objects/Modules__c/fields/Module_Order_number__c.field-meta.xml
<CustomField>
    <fullName>Module_Order_number__c</fullName>
    <label>Module Order number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>