force-app/main/default/objects/Modules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Module_Name__c</columns>
    <columns>Is_it_a_Mandatory_module__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Module_Order_number__c</columns>
    <columns>Class_Category__c</columns>
    <columns>Course__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>