force-app/main/default/objects/Modules__c/listViews/Demo_Modules_List.listView-meta.xml
<ListView>
    <fullName>Demo_Modules_List</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Class_Category__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Demo Modules List</label>
</ListView>